# ClauseIQ

./: .dockerignore  .dockerignore 2  .env.example  .gitignore  .gitignore 2  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  package.json  pyproject.toml  render.yaml  vercel.json
.deepeval/: .deepeval_telemetry.txt
.github/workflows/: ci.yml  deploy.yml  frontend-ci.yml
data/laws/: indian_contract_act_1872.json
docs/: ARCHITECTURE 2.md  DEMO_SCRIPT.md  DEPLOY.md  EVAL_METHODOLOGY 2.md  EVAL_METHODOLOGY.md  LAUNCH_POST 2.md  MCP_INSTALL.md
docs/components/: api-and-mcp.md  chunking.md  config-and-logging.md  domain-layer.md  law-corpus-and-ingestion.md  law-repository-and-health.md  multi-agent-pipeline.md  quality-layer.md  retrieval.md
frontend/: .gitignore 2  README.md  biome.json  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig 2.json  vite.config.ts
frontend/src/: App 2.tsx  main.tsx
frontend/src/components/: AgentTrace.tsx  CitationLink.tsx  ClauseCard.tsx  ContractUploader.tsx  ErrorBoundary.tsx  Layout.tsx  RiskGauge.tsx  ThemeToggle.tsx  theme-provider.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  sonner.tsx  textarea.tsx
frontend/src/hooks/: useAnalyzeContract.test.tsx  useAnalyzeContract.ts  useStreamingAgents.ts
frontend/src/lib/: api.ts  errors.test.ts  errors.ts  pdf.ts  sample.ts  schemas.test.ts  schemas.ts  severity.test.ts  severity.ts  sse.test.ts  sse.ts
frontend/src/routes/: about.tsx  analysis.tsx  index.tsx
frontend/src/stores/: analysis.test.ts  analysis.ts
frontend/src/styles/: globals.css
scripts/: diff_law_corpus 2.py  fetch_ica_source 2.py  ingest_laws.py
src/clauseiq/: __init__.py  config.py  logging_config 2.py  logging_config.py
src/clauseiq/application/: __init__ 2.py  schemas 2.py  workflows 2.py  workflows.py
src/clauseiq/application/agents/: __init__ 2.py  citation_verifier 2.py  citation_verifier.py  retriever.py  risk_analyzer 2.py  risk_analyzer.py  state.py  supervisor.py
src/clauseiq/domain/: __init__ 2.py  entities 2.py  entities.py  exceptions.py  ports.py  result.py  value_objects.py
src/clauseiq/evaluation/: __init__.py  dataset 2.py  dataset.py  golden_dataset 2.json  golden_dataset.json  metrics.py  runner.py
src/clauseiq/infrastructure/: __init__.py
src/clauseiq/infrastructure/guardrails/: __init__ 2.py  injection_detector 2.py  input_filter.py  output_filter 2.py
src/clauseiq/infrastructure/ingestion/: __init__.py  chunker 2.py  law_ingestor 2.py  pdf_parser.py
src/clauseiq/infrastructure/llm/: __init__.py  base.py  factory.py  gemini_flash 2.py  gemini_pro 2.py
src/clauseiq/infrastructure/observability/: __init__.py  langfuse_client 2.py  usage 2.py  usage.py
src/clauseiq/infrastructure/repositories/: __init__.py  law 2.py  law.py
src/clauseiq/infrastructure/vectorstore/: __init__.py  base.py  chroma.py  embedder.py
src/clauseiq/infrastructure/vectorstore/retrieval/: __init__.py  base.py  bm25 2.py  dense 2.py  hybrid.py
src/clauseiq/interfaces/: __init__ 2.py
src/clauseiq/interfaces/api/: __init__.py  dependencies.py  main.py  routes 2.py  routes.py
src/clauseiq/interfaces/mcp/: __init__.py  server 2.py  tools.py
tests/evaluation/: test_golden_dataset.py
tests/integration/: test_api.py  test_chroma.py  test_mcp_server 2.py  test_workflow.py
tests/unit/: test_chunker.py  test_cors.py  test_embedder.py  test_entities.py  test_eval_dataset.py  test_exceptions.py  test_guardrails.py  test_health 2.py  test_law_ingestor.py  test_law_repository 2.py  test_llm.py  test_observability 2.py  test_pdf_parser.py  test_ports.py  test_result.py  test_retrieval_strategies 2.py  test_schemas.py  test_usage.py  test_value_objects 2.py
